--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ select, option, input {
             </div>
           </div>
           <div class="button__wrap">
-            <button class="js_submit" type="button"> Subukan </button></div>
+            <button class="js_submit" type="submit"> Subukan </button></div>
     <input type="hidden" name="time_zone" value="3"></form>
 
   </div></div></div></section>
